Update and rename index.html to abrir-mi-tienda.html

--- a/abrir-mi-tienda.html
+++ b/abrir-mi-tienda.html
@@ -12,7 +12,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Encuentra los proveedores para tu Boda, Evento o Fiesta en CelebraMexico.com">
 <meta property="og:description" content="Celebra México es el nuevo Centro Comercial Virtual de Bodas, Eventos y Fiestas en México Aquí encuentras los mejores proveedores del país: desde fotógrafos, decoradores y wedding planners, hasta lugares, banquetes y entretenimiento. Si eres proveedor, esta es tu oportunidad de conectar con miles de parejas y clientes. Forma parte del directorio de proveedores que está transformando la industria de las celebraciones en México.">
-<meta property="og:url" content="https://celebramexico.om">
+<meta property="og:url" content="https://celebramexico.com/abrir-mi-tienda">
 <meta property="og:site_name" content="Celebra México">
 <meta property="og:image" content="https://celebramexico.com/static/Celebra%20M%C3%A9xico%20-%20Directorio%20de%20Proveedores%20en%20M%C3%A9xico.jpg">
 <meta name="twitter:card" content="summary_large_image">
